[gd_scene load_steps=4 format=3 uid="uid://crc55n5g6w58w"]

[ext_resource type="Script" uid="uid://8jinckvydc1h" path="res://items/scripts/item_slot.gd" id="1_3redx"]
[ext_resource type="Texture2D" uid="uid://buob4fdoywqp5" path="res://assets/ui/inventory_selected.png" id="2_rs3ve"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dxvxp"]

[node name="ItemSlot" type="ColorRect"]
custom_minimum_size = Vector2(18, 18)
offset_right = 18.0
offset_bottom = 18.0
color = Color(0.2, 0.2, 0.2, 0.5)
script = ExtResource("1_3redx")

[node name="ItemIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_dxvxp")

[node name="ItemQuantity" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -21.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
vertical_alignment = 2

[node name="Selected" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 18.0
offset_bottom = 18.0
texture = ExtResource("2_rs3ve")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 18.0
offset_bottom = 18.0
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
